--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -13,7 +13,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <!-- CSS personalizado -->
-        <link rel="stylesheet" href="css/persona.css">
+        <link rel="stylesheet" href="css/persona.css" />
     </head>
     <body>
         <div class="col">
@@ -21,23 +21,23 @@
                 <!-- Responsive navbar-->
                 <nav class="nave-topo navbar navbar-expand-lg navbar-dark bg-mentorTech z-index nav-topo">
                     <div class="container">
-                        <a class="navbar-brand" href="index.html"> <h1 style="font-size: 25px;">MentorTech</h1></a>
+                        <a class="navbar-brand" href="#!"> <h1 style="font-size: 25px;">MentorTech</h1></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                                 <li class="nav-item mt-1"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#features">Serviços</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#caminho">Caminho</a></li>
-                                <li class="nav-item mt-1"><a class="nav-link" href="sobre.html">Sobre</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="/iniciosobre">Sobre</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
-                                <li class="nav-item mt-1"><a class="nav-link" href="cadastrese.html">Cadastre-se</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="/iniciocadastro">Cadastre-se</a></li>
                                 <li class="nav-item mt-1">
                                     <div class="btn-group" role="group" aria-label="login para mentores e usuarios">
                                         <button type="button" style="border-radius: 20px 0 0 20px;" class="btn btn-secondary bg-dark">
-                                            <a href="" class="text-white-50" style="text-decoration:none">Cliente</a>
+                                            <a href="/loginusuario" class="text-white-50" style="text-decoration:none">Cliente</a>
                                         </button>
                                         <button type="button" style="border-radius: 0 20px 20px 0;" class="btn btn-primary ">
-                                            <a href="" class="text-white-50" style="text-decoration:none">Mentor</a>
+                                            <a href="/loginmentor" class="text-white-50" style="text-decoration:none">Mentor</a>
                                         </button>
                                     </div>
                                 </li>
@@ -58,7 +58,7 @@
                                             <h1 class="display-4 fw-bolder text-white mb-2">O caminho se torna um detalhe quando sabemos onde queremos chegar</h1>
                                            
                                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="cadastrese.html" target="blank">Começar</a>
+                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/iniciocadastro" target="blank">Começar</a>
                                                 <a class="btn btn-outline-light btn-lg px-4" href="sobre.html">Saiba mais</a>
                                             </div>
                                         </div>
@@ -104,20 +104,20 @@
                 </div>
             </div>
         </section>
-        <!-- Seção do sobre nos -->
       
-        <!-- Pricing section-->
+        <!-- Passoa a passo do usuario-->
         <section class="d-flex justify-content-sm-center border-0" id="caminho">
-           <img src="assets/img/passo-mentor.png" class="img-fluid" alt="Passo a Passo">
-        </section>
-        <section class="bg-light py-5 border-bottom">
+            <img src="assets/img/passo-mentor.png" class="img-fluid" alt="Passo a Passo">
+         </section>
+       
+         <section class="bg-light py-5 border-bottom">
             <div class="container px-5 my-5">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase mb-5">Mentores Destaques</h2>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-sm-3">
-                        <div class="card p-2"><img class=" card-img-top rounded-circle img-fluid" src="assets/img/01.jpeg" alt="..." />
+                        <div class="card p-2"><img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/01.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Verônica Castro</h5>
                                 <p class="card-text">CIO</p>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/02.jpeg" alt="..." />
+                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/02.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Severino</h5>
                                 <p class="card-text">DBA</p>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/03.jpeg" alt="..." />
+                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/03.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Marcos</h5>
                                 <p class="card-text">Business Intelligence</p>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class="card-img-top rounded-circle img-fluid" src="assets/img/04.jpeg" alt="..." />
+                            <img class="card-img-top rounded-circle img-fluid" src="assets/img/mentores/04.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Antônio</h5>
                                 <p class="card-text">Full Stack Developer</p>
@@ -204,8 +204,14 @@
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
-                       <!--seção do formulario de contato-->
-                        <form id="contactForm" action="" data-sb-form-api-token="API_TOKEN">
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- * * SB Forms Contact Form * *-->
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- This form is pre-integrated with SB Forms.-->
+                        <!-- To make this form functional, sign up at-->
+                        <!-- https://startbootstrap.com/solution/contact-forms-->
+                        <!-- to get an API token!-->
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
@@ -238,7 +244,9 @@
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
                                     <div class="fw-bolder">Envio de formulário bem sucedida!</div>
-                                  
+                                    To activate this form, sign up at
+                                    <br />
+                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                                 </div>
                             </div>
                             <!-- Submit error message-->
@@ -247,7 +255,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Enviar</button></div>
+                            <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Enviar</button></div>
                         </form>
                     </div>
                     <div class="col-lg-6">
@@ -266,7 +274,7 @@
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; MentorTech 2022</p></div>
-            <div class="cantainer text-center"><a href="politicaPriv.html" target="_blank" rel="noopener noreferrer">Politaca de Privacidade</a></div>
+            <div class="cantainer text-center"><a href="/iniciopoliticaPriv" target="_blank" rel="noopener noreferrer">Politaca de Privacidade</a></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
