--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -107,7 +107,7 @@
       
         <!-- Passoa a passo do usuario-->
         <section class="d-flex justify-content-sm-center border-0" id="caminho">
-            <img src="assets/img/passo-mentor.png" class="img-fluid" alt="Passo a Passo">
+            <img src="img/passo-mentor.png" class="img-fluid" alt="Passo a Passo">
          </section>
        
          <section class="bg-light py-5 border-bottom">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-sm-3">
-                        <div class="card p-2"><img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/01.jpeg" alt="..." />
+                        <div class="card p-2"><img class=" card-img-top rounded-circle img-fluid" src="img/01.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Verônica Castro</h5>
                                 <p class="card-text">CIO</p>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/02.jpeg" alt="..." />
+                            <img class=" card-img-top rounded-circle img-fluid" src="img/02.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Severino</h5>
                                 <p class="card-text">DBA</p>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class=" card-img-top rounded-circle img-fluid" src="assets/img/mentores/03.jpeg" alt="..." />
+                            <img class=" card-img-top rounded-circle img-fluid" src="img/03.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Marcos</h5>
                                 <p class="card-text">Business Intelligence</p>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="card p-2">
-                            <img class="card-img-top rounded-circle img-fluid" src="assets/img/mentores/04.jpeg" alt="..." />
+                            <img class="card-img-top rounded-circle img-fluid" src="img/04.jpeg" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Antônio</h5>
                                 <p class="card-text">Full Stack Developer</p>
