--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -68,7 +68,7 @@
                             <a class="nav-link" th:href="@{'/mentores/' + ${id}}">
                                 <i class="fas fa-fw fa-table"></i>
                                 <span>Perfil</span></a>
-                                <a class="nav-link" href="/editarmentor">
+                                <a class="nav-link" href="/cadastroagendamento">
                                     <i class="fas fa-fw fa-table"></i>
                                     <span>Cadastrar Agendamento</span></a>                                 
             </li>
