--- a/src/main/resources/templates/compartilhado/topusuario.html
+++ b/src/main/resources/templates/compartilhado/topusuario.html
@@ -64,7 +64,7 @@
                      <a class="nav-link" href="/usuarios/agendamento">
                             <i class="fas fa-fw fa-table"></i>
                             <span>Agendamentos</span></a>
-                                    <a class="nav-link" href="/usuarios/{id}">
+                                    <a class="nav-link" href="/agendarmentoria">
                                         <i class="fas fa-fw fa-table"></i>
                                         <span>Meus Agendamentos</span></a>
             </li>
