--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -30,14 +30,14 @@
                                 <li class="nav-item mt-1"><a class="nav-link" href="#caminho">Caminho</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="/iniciosobre">Sobre</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
-                                <li class="nav-item mt-1"><a class="nav-link" href="/iniciocadastro">Cadastre-se</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="https://personal-cdsn4vbi.outsystemscloud.com/Mentortech/Registrar" target="_blank">Cadastre-se</a></li>
                                 <li class="nav-item mt-1">
                                     <div class="btn-group" role="group" aria-label="login para mentores e usuarios">
                                         <button type="button" style="border-radius: 20px 0 0 20px;" class="btn btn-secondary bg-dark">
-                                            <a href="/loginusuario" class="text-white-50" style="text-decoration:none">Cliente</a>
+                                            <a href="https://personal-cdsn4vbi.outsystemscloud.com/Mentortech/Login" class="text-white-50" style="text-decoration:none">Cliente</a>
                                         </button>
                                         <button type="button" style="border-radius: 0 20px 20px 0;" class="btn btn-primary ">
-                                            <a href="/loginmentor" class="text-white-50" style="text-decoration:none">Mentor</a>
+                                            <a href="https://personal-cdsn4vbi.outsystemscloud.com/Mentortech/Login" class="text-white-50" style="text-decoration:none">Mentor</a>
                                         </button>
                                     </div>
                                 </li>
@@ -49,7 +49,6 @@
             </div>
             <div class="row">
                     <!-- Header-->
-                    <header class="bg-dark py-5">
                         <div class="header-containe">
                             <div class="container px-5">
                                 <div class="row gx-5 justify-content-center">
@@ -274,7 +273,7 @@
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; MentorTech 2022</p></div>
-            <div class="cantainer text-center"><a href="/iniciopoliticaPriv" target="_blank" rel="noopener noreferrer">Politaca de Privacidade</a></div>
+            <div class="cantainer text-center"><a href="/iniciopoliticapriv" target="_blank" rel="noopener noreferrer">Politaca de Privacidade</a></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
