--- a/src/main/resources/templates/mentores/cadastraragendamento.html
+++ b/src/main/resources/templates/mentores/cadastraragendamento.html
@@ -1,3 +1,4 @@
+<div th:replace="compartilhado/topusuario"></div>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -17,15 +18,15 @@
         </button>
     </div>
         
-        <form action="" class="mt-3 p-4 border rounded">
+        <form action="/criaragendamento" class="mt-3 p-4 border rounded">
             <div class="row">
                 <div class="col">
                     <label for="data">Data</label>
-                    <input type="date" class="form-control" id="dataCadastro" name="dataCadastro" required>
+                    <input type="date" class="form-control" id="data" name="data" required>
                 </div>
                 <div class="col">
                     <label for="horario">Horario</label>
-                    <input type="time" class="form-control" id="timeCadastro" name="timeCadastro" required>
+                    <input type="time" class="form-control" id="horario" name="horario" required>
                 </div>
             </div>
            <div class="row mt-4">
@@ -62,3 +63,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
+<div th:replace="compartilhado/baixo"></div>
