--- a/src/main/resources/templates/usuarios/testeAgendamento.html
+++ b/src/main/resources/templates/usuarios/testeAgendamento.html
@@ -1,4 +1,4 @@
-<div th:replace="compartilhado/topusuario"></div>
+<div th:replace="compartilhado/top"></div>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
