--- a/src/main/resources/static/css/persona.css
+++ b/src/main/resources/static/css/persona.css
@@ -1,19 +1,17 @@
-header{
-    background-image: url(/src/main/resources/static/img/businesswoman-login.jpg);
-    background-repeat: no-repeat;
-    background-position: 100%;
-    background-size: 100%;
-    height: 70vh;
-}
 .header-containe{
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 63vh;
-  margin-top: 15.5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 70vh;
+  }
+
+.img-header{
+    position: absolute;
+    height: 70vh;
+    z-index: -1;
 }
 
 .bg-mentorTech{
-    background-color: rgba(0, 0, 0, 0.5);;
+    background-color: rgba(0, 0, 0, 0.267);;
   }
 
 .text-size{
