--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -19,7 +19,7 @@
         <div class="col">
             <div class="row m-0 ">
                 <!-- Responsive navbar-->
-                <nav class="nave-topo navbar navbar-expand-lg navbar-dark bg-mentorTech z-index nav-topo">
+                <nav class="nave-topo navbar navbar-expand-lg navbar-dark bg-mentorTech z-index w-100">
                     <div class="container">
                         <a class="navbar-brand" href="#!"> <h1 style="font-size: 25px;">MentorTech</h1></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -50,15 +50,16 @@
             <div class="row">
                     <!-- Header-->
                         <div class="header-containe">
-                            <div class="container px-5">
-                                <div class="row gx-5 justify-content-center">
+                            <img src="img/gif.gif" class="img-fluid img-header w-100" alt="Imagem responsiva">
+                            <div class="container">
+                                <div class="row justify-content-center">
                                     <div class="col-lg-6 mt-5">
-                                        <div class="text-center my-5">
+                                        <div class="text-center my-2">
                                             <h1 class="display-4 fw-bolder text-white mb-2">O caminho se torna um detalhe quando sabemos onde queremos chegar</h1>
                                            
                                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/iniciocadastro" target="blank">Começar</a>
-                                                <a class="btn btn-outline-light btn-lg px-4" href="sobre.html">Saiba mais</a>
+                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://personal-cdsn4vbi.outsystemscloud.com/Mentortech/Registrar" target="blank">Começar</a>
+                                                <a class="btn btn-outline-light btn-lg px-4" href="/iniciosobre">Saiba mais</a>
                                             </div>
                                         </div>
                                     </div>
@@ -266,6 +267,8 @@
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="p-1 text-dark"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="p-1 text-dark"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
                         </div>
+
+
                     </div>
                 </div>
             </div>
