--- a/src/main/resources/templates/site/sobre.html
+++ b/src/main/resources/templates/site/sobre.html
@@ -69,6 +69,7 @@
         <!-- Footer-->
         <footer class="p-2 fixed-bottom bg-dark ">
             <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; MentorTech 2022</p></div>
+            <div class="cantainer text-center"><a href="/iniciopoliticapriv" target="_blank" rel="noopener noreferrer">Politaca de Privacidade</a></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
